data/all_generated_tests/raw_wast_tests/call_indirect_ImproperFunctionCallorReturnHandling_4485.wast
;; 4. **Test Description**: Call `call_indirect` with operands and index referencing an empty table, verifying if the trap correctly handles an invalid table index.    - **Constraint Checked**: Table definition and validity.    - **Relation to Improper Handling**: Ensures proper handling of empty or uninitialized tables.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 0 funcref)
    (func $empty-table (call_indirect (type 0) (i32.const 0) (i32.const 5)))
  )
  "undefined table element"
)